--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,15 @@ body {
 
 .wrapper {
   width: 400px;
-  border: 3px solid red;
   background-color: black;
   color: white;
 }
 
 .calc-button-row {
-  border: 3px solid blue;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  margin-bottom: 0.5%;
 }
 
 .screen {
@@ -29,4 +31,13 @@ body {
   font-family: 'Courier New', Courier, monospace;
   padding: 20px 5px;
   font-size: 40px;
+}
+
+.calc-button {
+  background-color: #dad9db;
+  color: black;
+  border: none;
+  font-size: 40px;
+  height: 100px;
+  flex-basis: 24.5%;
 }
