--- a/css/style.css
+++ b/css/style.css
@@ -41,3 +41,19 @@ body {
   height: 100px;
   flex-basis: 24.5%;
 }
+
+.calc-button:hover {
+  background-color: #ebebeb;
+}
+
+.calc-button:active {
+  background-color: #bbbcbe;
+}
+
+.double {
+  flex-basis: 49.7%;
+}
+
+.triple {
+  flex-basis: 74.8%;
+}
