--- a/css/style.css
+++ b/css/style.css
@@ -57,3 +57,12 @@ body {
 .triple {
   flex-basis: 74.8%;
 }
+
+.calc-button:last-child {
+  background-color: #df974c;
+  color: white;
+}
+
+.calc-button:last-child:hover {
+  background-color: #dfb07e;
+}
