--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,5 @@
-html {
+* {
   box-sizing: border-box;
-}
-
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
 }
 
 body {
@@ -13,33 +7,28 @@ body {
   margin: 0;
 }
 
-.wrapper {
+.calc {
   width: 400px;
   background-color: black;
   color: white;
 }
 
-.calc-button-row {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-between;
-  margin-bottom: 0.5%;
-}
-
 .screen {
-  text-align: right;
-  font-family: 'Courier New', Courier, monospace;
-  padding: 20px 5px;
+  color: white;
   font-size: 40px;
+  font-family: "Courier New", Courier, monospace;
+  text-align: right;
+  padding: 20px 5px;
 }
 
 .calc-button {
-  background-color: #dad9db;
+  background-color: #d8d9db;
   color: black;
-  border: none;
-  font-size: 40px;
   height: 100px;
-  flex-basis: 24.5%;
+  width: 24.5%;
+  border: none;
+  border-radius: 0;
+  font-size: 40px;
   cursor: pointer;
 }
 
@@ -52,11 +41,11 @@ body {
 }
 
 .double {
-  flex-basis: 49.7%;
+  width: 49.7%;
 }
 
 .triple {
-  flex-basis: 74.8%;
+  width: 74.8%;
 }
 
 .calc-button:last-child {
@@ -66,4 +55,19 @@ body {
 
 .calc-button:last-child:hover {
   background-color: #dfb07e;
+}
+
+.calc-button:last-child:active {
+  background-color: #dd8d37;
+}
+
+.calc-button-row {
+  display: flex;
+  align-content: stretch;
+  justify-content: space-between;
+  margin-bottom: 0.5%;
+}
+
+.calc-button-row:last-child {
+  padding-bottom: 0;
 }
